// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChangePasswordLayout disables submit button if inputs are invalid 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="ChangePasswordLayout__ChangeLayoutWrapper-sc-1lk64wu-0 cKcgYm"
        role="main"
      >
        <div>
          <div>
            <div>
              <span
                class="ChangePasswordLayout__ChangeHeaderImage-sc-1lk64wu-1 feuwiY"
              />
              <form
                class="ChangePasswordLayout__ChangeForm-sc-1lk64wu-4 fvfjNt"
                method="post"
              >
                <div
                  class="ChangePasswordLayout__HeadingText-sc-1lk64wu-2 bOLfqr"
                >
                  Reset Password
                </div>
                <div
                  class="ChangePasswordLayout__SubHeadingText-sc-1lk64wu-3 kggVdP"
                >
                  Your password must be between 8 and 15 characters and should include both upper and lower case letters, numbers, and special characters.
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
                >
                  <label
                    class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                  >
                    <input
                      class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                      data-testid="currentPassword"
                      maxlength="255"
                      name="currentPassword"
                      placeholder="Current Password"
                      type="password"
                      value=""
                    />
                  </label>
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
                >
                  <label
                    class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                  >
                    <input
                      class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                      maxlength="255"
                      name="password1"
                      placeholder="New Password"
                      type="password"
                      value=""
                    />
                  </label>
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
                >
                  <label
                    class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                  >
                    <input
                      class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                      maxlength="255"
                      name="password2"
                      placeholder="Retype Password"
                      type="password"
                      value=""
                    />
                  </label>
                </div>
                <button
                  class="StyledButton__StyledButtonComponent-sc-8t4kac-0 iwwGxg"
                  disabled=""
                  type="button"
                >
                  Change Password
                </button>
              </form>
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="ChangePasswordLayout__ChangeLayoutWrapper-sc-1lk64wu-0 cKcgYm"
      role="main"
    >
      <div>
        <div>
          <div>
            <span
              class="ChangePasswordLayout__ChangeHeaderImage-sc-1lk64wu-1 feuwiY"
            />
            <form
              class="ChangePasswordLayout__ChangeForm-sc-1lk64wu-4 fvfjNt"
              method="post"
            >
              <div
                class="ChangePasswordLayout__HeadingText-sc-1lk64wu-2 bOLfqr"
              >
                Reset Password
              </div>
              <div
                class="ChangePasswordLayout__SubHeadingText-sc-1lk64wu-3 kggVdP"
              >
                Your password must be between 8 and 15 characters and should include both upper and lower case letters, numbers, and special characters.
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                    data-testid="currentPassword"
                    maxlength="255"
                    name="currentPassword"
                    placeholder="Current Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                    maxlength="255"
                    name="password1"
                    placeholder="New Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                    maxlength="255"
                    name="password2"
                    placeholder="Retype Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
              <button
                class="StyledButton__StyledButtonComponent-sc-8t4kac-0 iwwGxg"
                disabled=""
                type="button"
              >
                Change Password
              </button>
            </form>
          </div>
        </div>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`ChangePasswordLayout handles API error without crash 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="ChangePasswordLayout__ChangeLayoutWrapper-sc-1lk64wu-0 cKcgYm"
        role="main"
      >
        <div>
          <div>
            <div>
              <span
                class="ChangePasswordLayout__ChangeHeaderImage-sc-1lk64wu-1 feuwiY"
              />
              <form
                class="ChangePasswordLayout__ChangeForm-sc-1lk64wu-4 fvfjNt"
                method="post"
              >
                <div
                  class="ChangePasswordLayout__HeadingText-sc-1lk64wu-2 bOLfqr"
                >
                  Reset Password
                </div>
                <div
                  class="ChangePasswordLayout__SubHeadingText-sc-1lk64wu-3 kggVdP"
                >
                  Your password must be between 8 and 15 characters and should include both upper and lower case letters, numbers, and special characters.
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
                >
                  <label
                    class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                  >
                    <input
                      class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                      data-testid="currentPassword"
                      maxlength="255"
                      name="currentPassword"
                      placeholder="Current Password"
                      type="password"
                      value="ValidPass1!"
                    />
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 StyledInput__ValidationIcon-sc-fkf055-3 hNEsIT kYVJfy"
                    >
                      <svg
                        aria-hidden="true"
                        class="Icon-sc-btq2kp-0"
                        fill="currentColor"
                        focusable="false"
                        name="check-circle"
                        stroke="none"
                        stroke-width="2"
                      >
                        <use
                          href="http://localhost:8080/public/images/sprite.svg#check-circle"
                        />
                      </svg>
                    </div>
                  </label>
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
                >
                  <label
                    class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                  >
                    <input
                      class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                      maxlength="255"
                      name="password1"
                      placeholder="New Password"
                      type="password"
                      value="ValidPass1!"
                    />
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 StyledInput__ValidationIcon-sc-fkf055-3 hNEsIT kYVJfy"
                    >
                      <svg
                        aria-hidden="true"
                        class="Icon-sc-btq2kp-0"
                        fill="currentColor"
                        focusable="false"
                        name="check-circle"
                        stroke="none"
                        stroke-width="2"
                      >
                        <use
                          href="http://localhost:8080/public/images/sprite.svg#check-circle"
                        />
                      </svg>
                    </div>
                  </label>
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
                >
                  <label
                    class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                  >
                    <input
                      class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                      maxlength="255"
                      name="password2"
                      placeholder="Retype Password"
                      type="password"
                      value="ValidPass1!"
                    />
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 StyledInput__ValidationIcon-sc-fkf055-3 hNEsIT kYVJfy"
                    >
                      <svg
                        aria-hidden="true"
                        class="Icon-sc-btq2kp-0"
                        fill="currentColor"
                        focusable="false"
                        name="check-circle"
                        stroke="none"
                        stroke-width="2"
                      >
                        <use
                          href="http://localhost:8080/public/images/sprite.svg#check-circle"
                        />
                      </svg>
                    </div>
                  </label>
                </div>
                <button
                  class="StyledButton__StyledButtonComponent-sc-8t4kac-0 bZbOLt"
                  type="button"
                >
                  Change Password
                </button>
              </form>
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="ChangePasswordLayout__ChangeLayoutWrapper-sc-1lk64wu-0 cKcgYm"
      role="main"
    >
      <div>
        <div>
          <div>
            <span
              class="ChangePasswordLayout__ChangeHeaderImage-sc-1lk64wu-1 feuwiY"
            />
            <form
              class="ChangePasswordLayout__ChangeForm-sc-1lk64wu-4 fvfjNt"
              method="post"
            >
              <div
                class="ChangePasswordLayout__HeadingText-sc-1lk64wu-2 bOLfqr"
              >
                Reset Password
              </div>
              <div
                class="ChangePasswordLayout__SubHeadingText-sc-1lk64wu-3 kggVdP"
              >
                Your password must be between 8 and 15 characters and should include both upper and lower case letters, numbers, and special characters.
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                    data-testid="currentPassword"
                    maxlength="255"
                    name="currentPassword"
                    placeholder="Current Password"
                    type="password"
                    value="ValidPass1!"
                  />
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 StyledInput__ValidationIcon-sc-fkf055-3 hNEsIT kYVJfy"
                  >
                    <svg
                      aria-hidden="true"
                      class="Icon-sc-btq2kp-0"
                      fill="currentColor"
                      focusable="false"
                      name="check-circle"
                      stroke="none"
                      stroke-width="2"
                    >
                      <use
                        href="http://localhost:8080/public/images/sprite.svg#check-circle"
                      />
                    </svg>
                  </div>
                </label>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                    maxlength="255"
                    name="password1"
                    placeholder="New Password"
                    type="password"
                    value="ValidPass1!"
                  />
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 StyledInput__ValidationIcon-sc-fkf055-3 hNEsIT kYVJfy"
                  >
                    <svg
                      aria-hidden="true"
                      class="Icon-sc-btq2kp-0"
                      fill="currentColor"
                      focusable="false"
                      name="check-circle"
                      stroke="none"
                      stroke-width="2"
                    >
                      <use
                        href="http://localhost:8080/public/images/sprite.svg#check-circle"
                      />
                    </svg>
                  </div>
                </label>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                    maxlength="255"
                    name="password2"
                    placeholder="Retype Password"
                    type="password"
                    value="ValidPass1!"
                  />
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 StyledInput__ValidationIcon-sc-fkf055-3 hNEsIT kYVJfy"
                  >
                    <svg
                      aria-hidden="true"
                      class="Icon-sc-btq2kp-0"
                      fill="currentColor"
                      focusable="false"
                      name="check-circle"
                      stroke="none"
                      stroke-width="2"
                    >
                      <use
                        href="http://localhost:8080/public/images/sprite.svg#check-circle"
                      />
                    </svg>
                  </div>
                </label>
              </div>
              <button
                class="StyledButton__StyledButtonComponent-sc-8t4kac-0 bZbOLt"
                type="button"
              >
                Change Password
              </button>
            </form>
          </div>
        </div>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`ChangePasswordLayout hides current password when token is present 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="ChangePasswordLayout__ChangeLayoutWrapper-sc-1lk64wu-0 cKcgYm"
        role="main"
      >
        <div>
          <div>
            <div>
              <span
                class="ChangePasswordLayout__ChangeHeaderImage-sc-1lk64wu-1 feuwiY"
              />
              <form
                class="ChangePasswordLayout__ChangeForm-sc-1lk64wu-4 fvfjNt"
                method="post"
              >
                <div
                  class="ChangePasswordLayout__HeadingText-sc-1lk64wu-2 bOLfqr"
                >
                  Reset Password
                </div>
                <div
                  class="ChangePasswordLayout__SubHeadingText-sc-1lk64wu-3 kggVdP"
                >
                  Your password must be between 8 and 15 characters and should include both upper and lower case letters, numbers, and special characters.
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
                >
                  <label
                    class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                  >
                    <input
                      class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                      maxlength="255"
                      name="password1"
                      placeholder="New Password"
                      type="password"
                      value=""
                    />
                  </label>
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
                >
                  <label
                    class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                  >
                    <input
                      class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                      maxlength="255"
                      name="password2"
                      placeholder="Retype Password"
                      type="password"
                      value=""
                    />
                  </label>
                </div>
                <button
                  class="StyledButton__StyledButtonComponent-sc-8t4kac-0 iwwGxg"
                  disabled=""
                  type="button"
                >
                  Change Password
                </button>
              </form>
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="ChangePasswordLayout__ChangeLayoutWrapper-sc-1lk64wu-0 cKcgYm"
      role="main"
    >
      <div>
        <div>
          <div>
            <span
              class="ChangePasswordLayout__ChangeHeaderImage-sc-1lk64wu-1 feuwiY"
            />
            <form
              class="ChangePasswordLayout__ChangeForm-sc-1lk64wu-4 fvfjNt"
              method="post"
            >
              <div
                class="ChangePasswordLayout__HeadingText-sc-1lk64wu-2 bOLfqr"
              >
                Reset Password
              </div>
              <div
                class="ChangePasswordLayout__SubHeadingText-sc-1lk64wu-3 kggVdP"
              >
                Your password must be between 8 and 15 characters and should include both upper and lower case letters, numbers, and special characters.
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                    maxlength="255"
                    name="password1"
                    placeholder="New Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                    maxlength="255"
                    name="password2"
                    placeholder="Retype Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
              <button
                class="StyledButton__StyledButtonComponent-sc-8t4kac-0 iwwGxg"
                disabled=""
                type="button"
              >
                Change Password
              </button>
            </form>
          </div>
        </div>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`ChangePasswordLayout renders current password when token is missing 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="ChangePasswordLayout__ChangeLayoutWrapper-sc-1lk64wu-0 cKcgYm"
        role="main"
      >
        <div>
          <div>
            <div>
              <span
                class="ChangePasswordLayout__ChangeHeaderImage-sc-1lk64wu-1 feuwiY"
              />
              <form
                class="ChangePasswordLayout__ChangeForm-sc-1lk64wu-4 fvfjNt"
                method="post"
              >
                <div
                  class="ChangePasswordLayout__HeadingText-sc-1lk64wu-2 bOLfqr"
                >
                  Reset Password
                </div>
                <div
                  class="ChangePasswordLayout__SubHeadingText-sc-1lk64wu-3 kggVdP"
                >
                  Your password must be between 8 and 15 characters and should include both upper and lower case letters, numbers, and special characters.
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
                >
                  <label
                    class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                  >
                    <input
                      class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                      data-testid="currentPassword"
                      maxlength="255"
                      name="currentPassword"
                      placeholder="Current Password"
                      type="password"
                      value=""
                    />
                  </label>
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
                >
                  <label
                    class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                  >
                    <input
                      class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                      maxlength="255"
                      name="password1"
                      placeholder="New Password"
                      type="password"
                      value=""
                    />
                  </label>
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
                >
                  <label
                    class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                  >
                    <input
                      class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                      maxlength="255"
                      name="password2"
                      placeholder="Retype Password"
                      type="password"
                      value=""
                    />
                  </label>
                </div>
                <button
                  class="StyledButton__StyledButtonComponent-sc-8t4kac-0 iwwGxg"
                  disabled=""
                  type="button"
                >
                  Change Password
                </button>
              </form>
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="ChangePasswordLayout__ChangeLayoutWrapper-sc-1lk64wu-0 cKcgYm"
      role="main"
    >
      <div>
        <div>
          <div>
            <span
              class="ChangePasswordLayout__ChangeHeaderImage-sc-1lk64wu-1 feuwiY"
            />
            <form
              class="ChangePasswordLayout__ChangeForm-sc-1lk64wu-4 fvfjNt"
              method="post"
            >
              <div
                class="ChangePasswordLayout__HeadingText-sc-1lk64wu-2 bOLfqr"
              >
                Reset Password
              </div>
              <div
                class="ChangePasswordLayout__SubHeadingText-sc-1lk64wu-3 kggVdP"
              >
                Your password must be between 8 and 15 characters and should include both upper and lower case letters, numbers, and special characters.
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                    data-testid="currentPassword"
                    maxlength="255"
                    name="currentPassword"
                    placeholder="Current Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                    maxlength="255"
                    name="password1"
                    placeholder="New Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                    maxlength="255"
                    name="password2"
                    placeholder="Retype Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
              <button
                class="StyledButton__StyledButtonComponent-sc-8t4kac-0 iwwGxg"
                disabled=""
                type="button"
              >
                Change Password
              </button>
            </form>
          </div>
        </div>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;

exports[`ChangePasswordLayout submits and redirects on success 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <main
        class="ChangePasswordLayout__ChangeLayoutWrapper-sc-1lk64wu-0 cKcgYm"
        role="main"
      >
        <div>
          <div>
            <div>
              <div
                data-testid="change-pass-navigate-element"
              />
              <span
                class="ChangePasswordLayout__ChangeHeaderImage-sc-1lk64wu-1 feuwiY"
              />
              <form
                class="ChangePasswordLayout__ChangeForm-sc-1lk64wu-4 fvfjNt"
                method="post"
              >
                <div
                  class="ChangePasswordLayout__HeadingText-sc-1lk64wu-2 bOLfqr"
                >
                  Reset Password
                </div>
                <div
                  class="ChangePasswordLayout__SubHeadingText-sc-1lk64wu-3 kggVdP"
                >
                  Your password must be between 8 and 15 characters and should include both upper and lower case letters, numbers, and special characters.
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
                >
                  <label
                    class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                  >
                    <input
                      class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                      data-testid="currentPassword"
                      maxlength="255"
                      name="currentPassword"
                      placeholder="Current Password"
                      type="password"
                      value=""
                    />
                  </label>
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
                >
                  <label
                    class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                  >
                    <input
                      class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                      maxlength="255"
                      name="password1"
                      placeholder="New Password"
                      type="password"
                      value="ValidPass1!"
                    />
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 StyledInput__ValidationIcon-sc-fkf055-3 hNEsIT kYVJfy"
                    >
                      <svg
                        aria-hidden="true"
                        class="Icon-sc-btq2kp-0"
                        fill="currentColor"
                        focusable="false"
                        name="check-circle"
                        stroke="none"
                        stroke-width="2"
                      >
                        <use
                          href="http://localhost:8080/public/images/sprite.svg#check-circle"
                        />
                      </svg>
                    </div>
                  </label>
                </div>
                <div
                  class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
                >
                  <label
                    class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                  >
                    <input
                      class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                      maxlength="255"
                      name="password2"
                      placeholder="Retype Password"
                      type="password"
                      value="ValidPass1!"
                    />
                    <div
                      class="CombinedStyling__Div-sc-c3jdxk-0 StyledInput__ValidationIcon-sc-fkf055-3 hNEsIT kYVJfy"
                    >
                      <svg
                        aria-hidden="true"
                        class="Icon-sc-btq2kp-0"
                        fill="currentColor"
                        focusable="false"
                        name="check-circle"
                        stroke="none"
                        stroke-width="2"
                      >
                        <use
                          href="http://localhost:8080/public/images/sprite.svg#check-circle"
                        />
                      </svg>
                    </div>
                  </label>
                </div>
                <button
                  class="StyledButton__StyledButtonComponent-sc-8t4kac-0 iwwGxg"
                  disabled=""
                  type="button"
                >
                  Change Password
                </button>
              </form>
            </div>
          </div>
        </div>
      </main>
    </div>
  </body>,
  "container": <div>
    <main
      class="ChangePasswordLayout__ChangeLayoutWrapper-sc-1lk64wu-0 cKcgYm"
      role="main"
    >
      <div>
        <div>
          <div>
            <div
              data-testid="change-pass-navigate-element"
            />
            <span
              class="ChangePasswordLayout__ChangeHeaderImage-sc-1lk64wu-1 feuwiY"
            />
            <form
              class="ChangePasswordLayout__ChangeForm-sc-1lk64wu-4 fvfjNt"
              method="post"
            >
              <div
                class="ChangePasswordLayout__HeadingText-sc-1lk64wu-2 bOLfqr"
              >
                Reset Password
              </div>
              <div
                class="ChangePasswordLayout__SubHeadingText-sc-1lk64wu-3 kggVdP"
              >
                Your password must be between 8 and 15 characters and should include both upper and lower case letters, numbers, and special characters.
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                    data-testid="currentPassword"
                    maxlength="255"
                    name="currentPassword"
                    placeholder="Current Password"
                    type="password"
                    value=""
                  />
                </label>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                    maxlength="255"
                    name="password1"
                    placeholder="New Password"
                    type="password"
                    value="ValidPass1!"
                  />
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 StyledInput__ValidationIcon-sc-fkf055-3 hNEsIT kYVJfy"
                  >
                    <svg
                      aria-hidden="true"
                      class="Icon-sc-btq2kp-0"
                      fill="currentColor"
                      focusable="false"
                      name="check-circle"
                      stroke="none"
                      stroke-width="2"
                    >
                      <use
                        href="http://localhost:8080/public/images/sprite.svg#check-circle"
                      />
                    </svg>
                  </div>
                </label>
              </div>
              <div
                class="CombinedStyling__Div-sc-c3jdxk-0 CombinedStyling__Flex-sc-c3jdxk-2 CombinedStyling__FlexRow-sc-c3jdxk-3 StyledInput__StyledInputWrapper-sc-fkf055-0 escqfF ckFvxY fjNDtr cyFDIt"
              >
                <label
                  class="StyledInput__StyledInputLabel-sc-fkf055-2 iHXgrc"
                >
                  <input
                    class="StyledInput__StyledInputInput-sc-fkf055-1 kkxInS"
                    maxlength="255"
                    name="password2"
                    placeholder="Retype Password"
                    type="password"
                    value="ValidPass1!"
                  />
                  <div
                    class="CombinedStyling__Div-sc-c3jdxk-0 StyledInput__ValidationIcon-sc-fkf055-3 hNEsIT kYVJfy"
                  >
                    <svg
                      aria-hidden="true"
                      class="Icon-sc-btq2kp-0"
                      fill="currentColor"
                      focusable="false"
                      name="check-circle"
                      stroke="none"
                      stroke-width="2"
                    >
                      <use
                        href="http://localhost:8080/public/images/sprite.svg#check-circle"
                      />
                    </svg>
                  </div>
                </label>
              </div>
              <button
                class="StyledButton__StyledButtonComponent-sc-8t4kac-0 iwwGxg"
                disabled=""
                type="button"
              >
                Change Password
              </button>
            </form>
          </div>
        </div>
      </div>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": {
    "@@observable": [Function],
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
  },
  "unmount": [Function],
}
`;
